--- a/src/main/resources/com/structure/project/SignIn.fxml
+++ b/src/main/resources/com/structure/project/SignIn.fxml
@@ -10,19 +10,20 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="@SignIn.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.structure.Logins.SignInController">
    <children>
-      <VBox alignment="CENTER" prefHeight="200.0" prefWidth="300.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox fx:id="signInVbox" alignment="CENTER" prefHeight="200.0" prefWidth="300.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Label fx:id="title" prefHeight="77.0" prefWidth="559.0" text="PulsePoint Remote Monitoring">
+            <Label fx:id="title" prefHeight="77.0" prefWidth="546.0" text="PulsePoint Remote Monitoring">
                <font>
                   <Font name="System Bold" size="30.0" />
                </font>
             </Label>
-            <Label fx:id="signInLabel" prefHeight="30.0" prefWidth="100.0" text="Sign In">
+            <Label fx:id="signInLabel" prefHeight="30.0" prefWidth="100.0" text="SignIn">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
@@ -30,42 +31,49 @@
                   <Insets />
                </VBox.margin>
             </Label>
-            <GridPane maxWidth="300.0" prefHeight="97.0" prefWidth="300.0">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
+            <StackPane fx:id="signInStackPane" maxHeight="400.0" maxWidth="400.0" prefHeight="240.0" prefWidth="400.0">
                <children>
-                  <Label alignment="CENTER" prefHeight="17.0" prefWidth="164.0" text="E-mail: " />
-                  <Label alignment="CENTER" prefHeight="17.0" prefWidth="163.0" text="Password: " GridPane.rowIndex="2" />
-                  <PasswordField fx:id="password" promptText="Enter password" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <TextField fx:id="username" promptText="Enter e-mail" GridPane.columnIndex="1" />
-                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="153.0" text="id:" GridPane.rowIndex="1" />
-                  <TextField fx:id="id" promptText="Enter id" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <GridPane alignment="TOP_CENTER" maxHeight="121.0" maxWidth="405.0" prefHeight="121.0" prefWidth="374.0" StackPane.alignment="TOP_CENTER">
+                     <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                     </rowConstraints>
+                     <children>
+                        <Label alignment="CENTER" prefHeight="18.0" prefWidth="205.0" text="E-mail: " />
+                        <Label alignment="CENTER" prefHeight="18.0" prefWidth="219.0" text="Password: " GridPane.rowIndex="2" />
+                        <TextField fx:id="username" promptText="Enter e-mail" GridPane.columnIndex="1" />
+                        <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="18.0" prefWidth="200.0" text="id:" GridPane.rowIndex="1" />
+                        <TextField fx:id="id" prefHeight="24.0" prefWidth="279.0" promptText="Enter id" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <PasswordField fx:id="password" promptText="Enter password" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                     </children>
+                     <StackPane.margin>
+                        <Insets />
+                     </StackPane.margin>
+                  </GridPane>
+                  <HBox alignment="CENTER" maxHeight="50.0" prefHeight="60.0" prefWidth="356.0" StackPane.alignment="BOTTOM_CENTER">
+                     <children>
+                        <Button mnemonicParsing="false" onAction="#signInButton" text="Sign In">
+                           <HBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </HBox.margin>
+                        </Button>
+                        <Button mnemonicParsing="false" onAction="#switchToSignUp" prefWidth="95.0" text="Sign Up">
+                           <HBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </HBox.margin>
+                        </Button>
+                     </children>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                  </HBox>
                </children>
-            </GridPane>
-            <HBox alignment="CENTER" prefHeight="17.0" prefWidth="100.0">
-               <children>
-                  <Button mnemonicParsing="false" onAction="#signInButton" text="Sign In">
-                     <HBox.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </HBox.margin>
-                  </Button>
-                  <Button mnemonicParsing="false" onAction="#switchToSignUp" text="Sign Up">
-                     <HBox.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </HBox.margin>
-                  </Button>
-               </children>
-               <opaqueInsets>
-                  <Insets top="10.0" />
-               </opaqueInsets>
-            </HBox>
+            </StackPane>
          </children>
       </VBox>
    </children>
