--- a/src/main/resources/com/structure/project/SignUp.fxml
+++ b/src/main/resources/com/structure/project/SignUp.fxml
@@ -10,55 +10,61 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="@SignUp.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.structure.Logins.SignUpController">
-   <children>
-      <VBox alignment="CENTER" layoutX="150.0" layoutY="100.0" prefHeight="200.0" prefWidth="300.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <children>
-            <Label fx:id="title" prefHeight="77.0" prefWidth="559.0" text="PulsePoint Remote Monitoring">
-               <font>
-                  <Font name="System Bold" size="30.0" />
-               </font>
-            </Label>
-            <Label alignment="CENTER" prefHeight="17.0" prefWidth="110.0" text="Sign Up">
-               <font>
-                  <Font name="System Bold" size="20.0" />
-               </font>
-               <VBox.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </VBox.margin>
-            </Label>
-            <GridPane maxWidth="300.0">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-               <children>
-                  <TextField fx:id="signupemail" promptText="Enter your e-mail" GridPane.columnIndex="1" />
-                  <TextField fx:id="signupid" promptText="Enter your id" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <PasswordField fx:id="signuppassword" promptText="Enter your password" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <Label alignment="CENTER" prefHeight="17.0" prefWidth="148.0" text="E-mail:" />
-                  <Label alignment="CENTER" prefHeight="17.0" prefWidth="170.0" text="Id:" GridPane.rowIndex="1" />
-                  <Label alignment="CENTER" prefHeight="17.0" prefWidth="173.0" text="Password: " GridPane.rowIndex="2" />
-               </children>
-            </GridPane>
-            <HBox alignment="CENTER" prefHeight="9.0" prefWidth="277.0">
-               <children>
-                  <Button mnemonicParsing="false" onAction="#returnToSignIn" text="Back" />
-                  <Button mnemonicParsing="false" onAction="#returnToSignInAfterSubmit" text="Submit">
-                     <HBox.margin>
+    <children>
+        <VBox fx:id="signUpVbox" alignment="CENTER" layoutX="150.0" layoutY="100.0" prefHeight="200.0" prefWidth="300.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <children>
+                <Label fx:id="title" prefHeight="82.0" prefWidth="545.0" text="PulsePoint Remote Monitoring">
+                    <font>
+                        <Font name="System Bold" size="30.0" />
+                    </font>
+                </Label>
+                <Label fx:id="signUpLabel" alignment="CENTER" prefHeight="30.0" prefWidth="100.0" text="Sign Up">
+                    <font>
+                        <Font name="System Bold" size="20.0" />
+                    </font>
+                    <VBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </HBox.margin></Button>
-               </children>
-            </HBox>
-         </children>
-      </VBox>
-   </children>
+                    </VBox.margin>
+                </Label>
+                <StackPane fx:id="signUpStackPane" maxHeight="400.0" maxWidth="400.0" prefHeight="218.0" prefWidth="400.0">
+                    <children>
+                        <GridPane alignment="CENTER" maxHeight="120.0" StackPane.alignment="TOP_CENTER">
+                            <columnConstraints>
+                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                            </columnConstraints>
+                            <rowConstraints>
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            </rowConstraints>
+                            <children>
+                                <TextField fx:id="signupemail" promptText="Enter your e-mail" GridPane.columnIndex="1" />
+                                <TextField fx:id="signupid" promptText="Enter your id" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                <PasswordField fx:id="signuppassword" promptText="Enter your password" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="27.0" prefWidth="178.0" text="E-mail:" />
+                                <Label alignment="CENTER" prefHeight="29.0" prefWidth="193.0" text="Id:" GridPane.rowIndex="1" />
+                                <Label alignment="CENTER" prefHeight="17.0" prefWidth="173.0" text="Password: " GridPane.rowIndex="2" />
+                            </children>
+                        </GridPane>
+                        <HBox alignment="CENTER" maxHeight="50.0" prefHeight="60.0" prefWidth="277.0" StackPane.alignment="BOTTOM_CENTER">
+                            <children>
+                                <Button mnemonicParsing="false" onAction="#returnToSignIn" text="Back" />
+                                <Button alignment="BOTTOM_CENTER" mnemonicParsing="false" onAction="#returnToSignInAfterSubmit" text="Submit">
+                                    <HBox.margin>
+                                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                    </HBox.margin>
+                                </Button>
+                            </children>
+                        </HBox>
+                    </children>
+                </StackPane>
+            </children>
+        </VBox>
+    </children>
 </AnchorPane>
